# bevy_game

./: Cargo.toml
src/client/: main.rs
src/server/: main.rs
src/shared/: lib.rs
